# PathProcessor

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENCE  LICENSE  OWNERS  README.md
.github/workflows/: build.yml  style-check.yml
Documentation/: config.doxy
Include/: argp.hpp  generator.hpp  input.hpp  output.hpp
Include/Controller/: ArgumentParser.hpp  CollisionDetection.hpp  PathProcessing.hpp  Settings.hpp  StlFileReader.hpp  StlLoader.hpp
Include/G-Code/: GCodeFileWriter.hpp  GCodeLoader.hpp
Include/Geometry/: Cone.hpp  Mesh.hpp  Path.hpp  Point.hpp  Triangle.hpp  Vector3.hpp  VerticalLine.hpp  vertical_line.hpp
Include/STL/: StlFileReader.hpp  StlLoader.hpp
Source/Controller/: ArgumentParser.cpp  CollisionDetection.cpp  EntryPoint.cpp  PathProcessing.cpp  Settings.cpp  StlFileReader.cpp  StlLoader.cpp  main.cpp
Source/G-Code/: GCodeFileWriter.cpp  GCodeLoader.cpp
Source/Geometry/: Cone.cpp  Mesh.cpp  Path.cpp  Point.cpp  Triangle.cpp  Vector3.cpp  VerticalLine.cpp
Source/STL/: StlFileReader.cpp  StlLoader.cpp
Test/: ArgumentParserTest.cpp  CollisionDetectionTest.cpp  ConeTest.cpp  GCodeLoaderTest.cpp  MeshTest.cpp  PathTest.cpp  PointTest.cpp  SettingsTest.cpp  StlLoaderTest.cpp  TriangleTest.cpp  VerticalLineTest.cpp
cmake/: code-style.cmake  generate-docs.cmake
docs/: config.doxy
include/geometry/: cone.hpp  mesh.hpp  path.hpp  point.hpp  triangle.hpp  vertical_line.hpp
scripts/: build.ps1  build.sh  clean.ps1  clean.sh
src/: argp.cpp  main.cpp
src/generator/: generator_zigzag.cpp
src/geometry/: cone.cpp  mesh.cpp  path.cpp  point.cpp  triangle.cpp  vertical_line.cpp
src/input/: input_stl.cpp
src/output/: output_gcode.cpp
